--- a/package.json
+++ b/package.json
@@ -5,22 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon run server"
+    "start": "nodemon run server"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bryce-Soghigian/webauth-i-challenge.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Bryce",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Bryce-Soghigian/webauth-i-challenge/issues"
   },
   "homepage": "https://github.com/Bryce-Soghigian/webauth-i-challenge#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "helmet": "^3.20.0",
     "knex": "^0.19.1",
+    "sqlite": "^3.0.3",
     "sqlite3": "^4.1.0"
-  }
+  },
+  "devDependencies": {}
 }
